# PyHacker

./: .gitignore  .gitmodules  LICENSE  main.py  pyproject.toml
Basics/: Hinting-Checking-Validation.py  class.py  control_flow.py  operator.py
Basics/module/: demo.py  test.py
Container/: ex_dict.py  ex_list.py  ex_set.py  ex_string.py  ex_tuple.py
Crawl4ai/: crawl4aiTest.py
FastAPI/: hello.py
Matplotlib/: create_and_customizing.py
Matplotlib/04_StackPlot/: code.py
Matplotlib/05_FillingAreaOnLinePlot/: code.py
NumPy/: README.md  numpy_hands-dirty.ipynb
OOP/: Dunder.py  Inheritance.py  OOP.md  magic_bubble_sort.py  oop.py  oop_method.py  property_decorators.py  python101.ipynb
Pandas/: envTest.py  pandas101.ipynb
