[project]
name = "pyhacker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.14",
    "matplotlib>=3.10.1",
    "notebook>=7.4.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pydantic>=2.11.5",
    "typing>=3.10.0.0",
]
